--- a/q/160646.html
+++ b/q/160646.html
@@ -26,14 +26,14 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>015</td><td>Javascript</td><td>240828T131847Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/275204#275204">ThePlane</a></td></tr>
-<tr d-ix="1"><td>012</td><td>Uiua</td><td>240827T123929Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/275188#275188">Europe20</a></td></tr>
-<tr d-ix="2"><td>028</td><td>Juby</td><td>240312T194902Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/271752#271752">Jordan</a></td></tr>
-<tr d-ix="3"><td>016</td><td>YASEPL</td><td>240312T164133Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/271742#271742">madeforl</a></td></tr>
-<tr d-ix="4"><td>048</td><td>Pascal</td><td>240312T020014Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/271726#271726">Kai Burg</a></td></tr>
-<tr d-ix="5"><td>024</td><td>TypeScript's type system</td><td>240121T205952Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/269452#269452">noodle p</a></td></tr>
-<tr d-ix="6"><td>015</td><td>05AB1E</td><td>231204T210157Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/267285#267285">Flummox</a></td></tr>
-<tr d-ix="7"><td>106</td><td>Malbolge</td><td>231204T162708Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/267279#267279">ceilingc</a></td></tr>
+<tr d-ix="0"><td>105</td><td>Malbolge</td><td>231204T162708Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/267279#267279">ceilingc</a></td></tr>
+<tr d-ix="1"><td>015</td><td>Javascript</td><td>240828T131847Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/275204#275204">ThePlane</a></td></tr>
+<tr d-ix="2"><td>012</td><td>Uiua</td><td>240827T123929Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/275188#275188">Europe20</a></td></tr>
+<tr d-ix="3"><td>028</td><td>Juby</td><td>240312T194902Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/271752#271752">Jordan</a></td></tr>
+<tr d-ix="4"><td>016</td><td>YASEPL</td><td>240312T164133Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/271742#271742">madeforl</a></td></tr>
+<tr d-ix="5"><td>048</td><td>Pascal</td><td>240312T020014Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/271726#271726">Kai Burg</a></td></tr>
+<tr d-ix="6"><td>024</td><td>TypeScript's type system</td><td>240121T205952Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/269452#269452">noodle p</a></td></tr>
+<tr d-ix="7"><td>015</td><td>05AB1E</td><td>231204T210157Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/267285#267285">Flummox</a></td></tr>
 <tr d-ix="8"><td>012</td><td>RProgN 2</td><td>231203T222507Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/267262#267262">ATaco</a></td></tr>
 <tr d-ix="9"><td>014</td><td>Thunno</td><td>230216T174745Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/257906#257906">The Thon</a></td></tr>
 <tr d-ix="10"><td>014</td><td>dc</td><td>220826T073556Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/251368#251368">Sandra</a></td></tr>
@@ -186,7 +186,7 @@
 <tr d-ix="157"><td>010</td><td>Pip</td><td>180329T215005Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/160753#160753">DLosc</a></td></tr>
 <tr d-ix="158"><td>018</td><td>Ruby</td><td>180329T214857Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/160752#160752">benj2240</a></td></tr>
 <tr d-ix="159"><td>032</td><td>Batch</td><td>180329T193835Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/160730#160730">Neil</a></td></tr>
-<tr d-ix="160"><td>022</td><td>Swift</td><td>180329T204923Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/160742#160742">Tam&#225</a></td></tr>
+<tr d-ix="160"><td>022</td><td>Swift</td><td>180329T204923Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/160742#160742">ٴٴٴ</a></td></tr>
 <tr d-ix="161"><td>012</td><td>APL Dyalog Unicode</td><td>180329T155747Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/160669#160669">Ad&#225;</a></td></tr>
 <tr d-ix="162"><td>015</td><td>Retina</td><td>180329T202957Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/160736#160736">Leo</a></td></tr>
 <tr d-ix="163"><td>014</td><td>PowerShell</td><td>180329T200121Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/160733#160733">AdmBorkB</a></td></tr>
@@ -220,32 +220,38 @@
 <tr d-ix="191"><td>010</td><td>Pyth</td><td>180329T153850Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/160649#160649">user4854</a></td></tr>
 <tr d-ix="192"><td>007</td><td>Jelly</td><td>180329T154145Z</td><td><a href="https://codegolf.stackexchange.com/questions/160646/output-your-score/160650#160650">Esolangi</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Javascript: 15 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/TryItOnline/malbolge" rel="nofollow noreferrer">Malbolge</a>, <s>106</s> 105 bytes</h1>
+<pre><code>('%;:^&quot;!~5XjzxxB4QQr*).'K8I#YFEgCe@?&gt;&gt;=N^:\7Z6GVlk1RRPOe*LbKII^$FEDY^W{?x,+W)88MLp4320Fj.gBx@R''%$$^&gt;!6;X
+</code></pre>
+<p><a href="https://tio.run/##y03MScrPSU/9/19DXdXaKk5Jsc40IquqosLJJDCwSEtTT93bwlM50s013TnVwd7OztYvzirGPMrMPSwn2zAoKMA/VcsnydvTM07FzdUlMi682r5CRztc08LC16fAxNjIwC1LL92pwiFIXV1VRSXOTtHMOuL/fwA" rel="nofollow noreferrer" title="Malbolge – Try It Online">Try it online!</a></p>
+<p>Created with <a href="http://zb3.me/malbolge-tools/#generator" rel="nofollow noreferrer">zb3 malbolge tools</a></p>
+</div>
+<div id="pu1" class="pu"><h1>Javascript: 15 bytes</h1>
 <p>not sure the exact rules, but I am treating a function as the program.</p>
 <pre class="lang-js prettyprint-override"><code>n=&gt;0xF+&quot; bytes&quot;
 n=&gt;3*5+&quot; bytes&quot; // if you don't wan't byte length in hex either
 </code></pre>
 <p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/V9s@z/P1s6gwk1bSSGpsiS1WOl/cn5ecX5Oql5OfrpGsYampvV/AA" rel="nofollow noreferrer">Try It Online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 12 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 12 bytes</h1>
 <pre><code>-3&quot;45#e|whv&quot;
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_13_0-dev_1__LTMiNDUjZXx3aHYiCg==" rel="nofollow noreferrer">Try it here!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/cyoce/J-uby" rel="nofollow noreferrer">J-uby</a>, 28 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/cyoce/J-uby" rel="nofollow noreferrer">J-uby</a>, 28 bytes</h1>
 <p>I know more succinct solutions are possible but this one amused me.</p>
 <pre class="lang-ruby prettyprint-override"><code>:join&amp;:succ*[?1,?7,&quot; byter&quot;]
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m700K740qXLBIjfbpaUlaboWe6yy8jPz1KyKS5OTtaLtDXXszXWUFJIqS1KLlGIhSlYUlJYUK7hFQ7kLFkBoAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/madeforlosers/YASEPL-esolang/" rel="nofollow noreferrer">YASEPL</a>, 16 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/madeforlosers/YASEPL-esolang/" rel="nofollow noreferrer">YASEPL</a>, 16 bytes</h1>
 <pre><code>=a$**^~&gt;&quot; bytes&quot;
 </code></pre>
 <h1>ibe, 28 bytes</h1>
 <pre><code>dheoslresluuslopslotslupslor
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h2>Pascal, 48 Bytes</h2>
+<div id="pu5" class="pu"><h2>Pascal, 48 Bytes</h2>
 <p>Pascal according to ISO standard 10206 “Extended Pascal” allows you to specify <code>integer</code> literals up to a base of 36.</p>
 <pre class="lang-pascal prettyprint-override"><code>program p(output);begin write(7#66,' Bytes')end.
 </code></pre>
@@ -253,7 +259,7 @@ n=&gt;3*5+&quot; bytes&quot; // if you don't wan't byte length in hex either
 </code></pre>
 <p>See also the <a href="/a/172991">FreePascal submission</a>.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.typescriptlang.org" rel="nofollow noreferrer">TypeScript</a>'s type system, 24 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.typescriptlang.org" rel="nofollow noreferrer">TypeScript</a>'s type system, 24 bytes</h1>
 <pre class="lang-typescript prettyprint-override"><code>type F=`${0o30} bytes`;;
 </code></pre>
 <p><a href="https://www.typescriptlang.org/play?#code/C4TwDgpgBAYgvAAwCQG8AMB7AzGgvlAIxGAgGcEBuCgKAHpapGA9AfmqA" rel="nofollow noreferrer">Try it at  the TS playground</a></p>
@@ -265,16 +271,10 @@ type F=`${Z}${Z} bytes`;;;
 <p><a href="https://www.typescriptlang.org/play?#code/C4TwDgpgBAWgvAbQIwBpXrQXQQIgDYQB2A5sABY6YBQokUAYnAAYAkA3jAL7tdQBGIYBADOTANwSqAeilQ5APQD8VIA" rel="nofollow noreferrer">Try it at the TS playground</a></p>
 <p>3 dead bytes there, in order to get both digits the same.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, 15 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, 15 bytes</h1>
 <pre><code>30 2/ò&quot; bytes&quot;J
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f/f2EDBSP/wJiWFpMqS1GIlr///AQ" rel="nofollow noreferrer" title="05AB1E – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/TryItOnline/malbolge" rel="nofollow noreferrer">Malbolge</a>, 106 bytes</h1>
-<pre><code>D'`_ML&quot;n&lt;YkFEVwwe@PsON;:ml[kG4ECe#z@x,_^)\[Zvotm3qSi/gfed*hgfH%]baZ_^W{UZSRWVUNrR4PINGLEiIBG@dDCB$@?&gt;=&lt;5YF
-</code></pre>
-<p><a href="https://tio.run/##y03MScrPSU/9/99FPSHe10cpzyYy2801rLw81SGg2N/P2io3Jzrb3cTVOVW5yqFCJz5OMyY6qiy/JNe4MDhTPz0tNUUrIz3NQzU2KTEqPi68OjQqOCg8LNSvKMgkwNPP3cc109PJ3SHFxdlJxcHeztbGNNLt/38A" rel="nofollow noreferrer" title="Malbolge – Try It Online">Try it online!</a></p>
-<p>Created with <a href="http://zb3.me/malbolge-tools/#generator" rel="nofollow noreferrer">zb3 malbolge tools</a></p>
 </div>
 <div id="pu8" class="pu"><h1><a href="https://github.com/TehFlaminTaco/RProgN-2" rel="nofollow noreferrer">RProgN 2</a>, 12 bytes</h1>
 <pre><code>34*&quot; bytes&quot;+
