--- a/q/275563.html
+++ b/q/275563.html
@@ -26,12 +26,35 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>625</td><td>Vyxal g</td><td>240916T201441Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275565#275565">pacman25</a></td></tr>
+<tr d-ix="0"><td>097</td><td>Python</td><td>240916T201904Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275567#275567">TheLittl</a></td></tr>
+<tr d-ix="1"><td>063</td><td>JavaScript ES6</td><td>240916T201812Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275566#275566">Arnauld</a></td></tr>
+<tr d-ix="2"><td>625</td><td>Vyxal g</td><td>240916T201441Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275565#275565">pacman25</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>g</code>, 50 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 6.25 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 97 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>g=lambda x:all(x%i for i in range(2,x))
+f=lambda p,q=2:q if g(q)*g(int(f'{p+q}{q}'))else f(p,q+1)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=PY9BCsIwEEX3PcVspImNi0SkWug9BHERNamBmCZthEroSdx0o3fyNqbUuhiYgT___f9824e_1mYYXncvV9sPr0rNb6cLh67gWqNuoUDWDShQBhpuKoEY6TBO5KyzxJWscKAkVMjhZYWU8UimwWauD65PMRa6FSBRVGYU_0B7L1p_5q1ooYQDI7AmsCGQE6A0Trxo3Hc5o8dkDODHAP-fAmwzYSQKvsfRI0jkcaRN_nOhLw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 63 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>p=&gt;{for(d=q=2;d&gt;1;)for(d=n=[++q+p]+q;q&lt;d--|q%d&amp;&amp;n%d;);return q}
+</code></pre>
+<p><a href="https://tio.run/##TcoxDsIgFADQ3VO4tIEATaAxxCC9SNOB9IPRtMCn1UU9Ow4uji95d/d021xueRcxga/B1myHV0iFgEWrDAzS0B@jHRlDlieGBi8gxBsbaNvYgKGm@P1R4hE/dU5xS4vvlnQlo@I9P3HNpeSy51JP3eoyCZQe/lsgZ60kpfUL" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>g</code>, 50 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 6.25 bytes</h1>
 <pre><code>Þp'⁰+nJæ
 </code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyLigKZnPUEiLCIiLCLDnnAn4oGwK25Kw6YiLCIiLCIyXG4zXG41XG43XG4xMVxuMTNcbjE3XG4xOVxuMjNcbjk3MjEiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
+<pre><code>Þp'⁰+nJæ­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁪‏‏​⁡⁠⁡‌⁢​‎⁪⁪⁠⁪⁪⁠‎⁪⁡⁪⁠⁪⁣⁪‏‏​⁡⁠⁡‌⁣​‎‎⁪⁡⁪⁠⁪⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁪‏‏​⁡⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁪‏‏​⁡⁠⁡‌⁢⁡​‎‎⁪⁡⁪⁠⁪⁢⁤⁪‏‏​⁡⁠⁡‌­
+Þp        # ‎⁡a list of infinite primes
+  '       # ‎⁢filtered by
+   ⁰+     # ‎⁣(p+q)
+     nJ   # ‎⁤(p+q)&quot;q
+       æ  # ‎⁢⁡is prime
+💎
+</code></pre>
+<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.
+<a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyLigKZnPUEiLCIiLCLDnnAn4oGwK25Kw6YiLCIiLCIyXG4zXG41XG43XG4xMVxuMTNcbjE3XG4xOVxuMjNcbjk3MjEiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
 <p>Bitstring:</p>
 <pre><code>00101011010000010100011111000101000101101101110110
 </code></pre>
