--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240916T214008Z
+"   /golfscore                                      20240916T221329Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/275564.html">Count squares in my pi approximation            : 0275564</a>
 <a href="q/275563.html">Smallest prime q such that concatenation (p+q)q : 0275563</a>
 <a href="q/235964.html">Implement the hyperfactorial                    : 0235964</a>
 <a href="q/275546.html">Not great at regexs. Trying to code-golf this be: 0275546</a>
