--- a/q/275564.html
+++ b/q/275564.html
@@ -26,13 +26,33 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>173</td><td>Perl 5.10</td><td>240916T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275568#275568">Kjetil S</a></td></tr>
+<tr d-ix="0"><td>018</td><td>Jelly</td><td>240916T234630Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275571#275571">Unrelate</a></td></tr>
+<tr d-ix="1"><td>173</td><td>Perl 5.10</td><td>240916T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275568#275568">Kjetil S</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>.10, 173 bytes</h1>
-
-<pre class="lang-perl prettyprint-override"><code>@c=[0,0,2,2];while(1){@c=grep<span class="math-container">$$_[2]**2+$$</span>_[3]**2&lt;4?0*$C++:1,map{($a,$b,$c,$d)=@$_;$X=($a+$c)/2;$Y=($b+$d)/2;[$a,$b,$X,$Y],[$X,$b,$c,$Y],[$a,$Y,$X,$d],[$X,$Y,$c,$d]}@c;say$C}
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 bytes</h1>
+<pre><code>Ż2*R²ạ²Ʋ€½Ḟ§Äṫ-ḅ-4
 </code></pre>
-<p><a href="https://tio.run/##LYzLDoIwEEV/ZhZAR4UqG2sjCWv3NE1DeEVJUBowGoP8urU8VnPPPTOjq64JDXx5wExUcOmjjxSpYu9b3VRO4A62vXaVBkglVZ5HyZT2Uzodzr4HMSHHAO@ZHhzIEHKEAqF0eQQpg4TbkkDh7igDYSEn1lmQ626CIBTKaS6XM1knZleuTixf1RgVrM8@EI/G/Fr9rNtHbzaXV7gN/D8" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##ATMAzP9qZWxsef//xbsyKlLCsuG6ocKyxrLigqzCveG4nsKnw4Thuast4biFLTT/w4cpWf//MTA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
+<p>Takes n as input and outputs the nth element, computing the sequence as the cumulative sums of A177144 (number of squares added to areas not covered by squares in the previous iteration of A156790. Just barely beats the first-n-outputting <code>Ż2*R²ạ²Ʋ€½Ḟ§×4ạḊƲÄṖ</code>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>.10, 173 bytes</h1>
+
+<pre class="lang-perl prettyprint-override"><code>@c=[0,0,2,2];while(1){@c=grep<span class="math-container">$$_[2]**2+$$</span>_[3]**2&lt;4?0*$n++:1,map{($a,$b,$c,$d)=@$_;$X=($a+$c)/2;$Y=($b+$d)/2;[$a,$b,$X,$Y],[$X,$b,$c,$Y],[$a,$Y,$X,$d],[$X,$Y,$c,$d]}@c;say$n}
+</code></pre>
+<p><a href="https://tio.run/##LYzLDoIwEEV/ZhZAR22rbqyN/IB7SEMIFKIkCA0YjUF@3Voeq7nnnpkxZVcfLXwlEzbUUlGkyJEn4n2v6tJj/uDaW1cagFTxJAg4mdJ@SufDhQbQEHJi@MjM4EGGkCNohMKXIaQCIulKAtrfcQGxg5w450CtuxFCnKCa5nI5k3Px7IrVxcvXZAy16LMPNKO1v9Y8q7bp7eb6Om4Z/QM" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a> outputs
+1,
+5,
+14,
+33,
+71,
+140,
+274,
+563,
+1083,
+2159,
+4293,
+8391
+before it times out after one minute.</p>
 </div>
 
 <table id="st">
