--- a/q/275564.html
+++ b/q/275564.html
@@ -26,21 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>121</td><td>Javascript Node.JS</td><td>240917T021829Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275574#275574">Jake</a></td></tr>
-<tr d-ix="1"><td>177</td><td>Scala 3</td><td>240917T021529Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275573#275573">138 Aspe</a></td></tr>
+<tr d-ix="0"><td>173</td><td>Scala 3</td><td>240917T021529Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275573#275573">138 Aspe</a></td></tr>
+<tr d-ix="1"><td>121</td><td>Javascript Node.JS</td><td>240917T021829Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275574#275574">Jake</a></td></tr>
 <tr d-ix="2"><td>018</td><td>Jelly</td><td>240916T234630Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275571#275571">Unrelate</a></td></tr>
 <tr d-ix="3"><td>100</td><td>Python 3</td><td>240917T000136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275572#275572">David Ch</a></td></tr>
 <tr d-ix="4"><td>173</td><td>Perl 5.10</td><td>240916T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275568#275568">Kjetil S</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/nodejs" rel="nofollow noreferrer">Javascript (Node.JS)</a>, 121 bytes</h1>
-<p><a href="https://tio.run/##bcxNDoIwEEDh25CZ/gWiOyiJG3Z6AWPMCBVraKsFTIx69srOjev35V3pQWMb7W2SPnQmpV57XUOjna73SqlNjPSEoqocHlQ03dwaABJHYXFhNsu2NF3UeI8TrBlz0jKL7xw5iRwRPMrfxP85EF@xBiwuOp1DBNJ5SVVRlPhqgx/DYNQQeuhhN7uTWTrniPhJXw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<pre class="lang-js prettyprint-override"><code>g=n=&gt;(F=m=&gt;[...Array(1&lt;&lt;m)].reduce((a,_,i)=&gt;(i&amp;&amp;Math.sqrt(4**m-i*i)|0)+a,0))(n)-[...Array(n)].reduce((a,_,i)=&gt;a+3*F(i),0)
-</code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 177 bytes</h1>
-<p>Golfed version. <a href="https://ato.pxeger.com/run?1=VU-7TgNBDOzzFdYphR1pT3k06MQhgWiQoEJUUYpNcrcs2vMeu3tECOUv6GhCAQ0Vn5O_Ye-Rgsb2jMf2-OPbb6SRi59lItjupONkdXy366diE-BOaoa3EcC2KKGKAKVTPoNL5-Tr8j44zWpFGTywDpB3SoDSOkAN5wKmECzMpzQ0AF6kAVf4xrRqhZoGvo6LgmH0icKxptgc97KkV-xj3H81oRRnx9_WS4mc3XCgHGftjSutIsI5pbXdIVMabMRiRmkla9T5RSXDY1oaax12pX92ARH_z80nTCQGTg8ctcuubbM2RVfeWlaU-qYatT7UyUc0RGIxwe5lPl0uO2Vv_HN44HDo8x8" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<pre class="lang-scala prettyprint-override"><code>def f(n:Int)=(1 to BigInt(2).pow(n).toInt-1).map(i=&gt;math.floor(math.sqrt(((BigInt(2).pow(2*n))-BigInt(i).pow(2)).toDouble)).toLong).sum
-def g(n:Int)=f(n)-3*(0 to n-1).map(f).sum
+<div id="pu0" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 173 bytes</h1>
+<p>Golfed version. <a href="https://ato.pxeger.com/run?1=NY6_TsMwEMb3PsUp6nCH5ChNGVBEkEAsSDAhpqqDW2Jj5NjBdqgQ6luwsZQBFsQD9W1w_i32fd99d_f7_PFbrvnyd5UwY3fcmWR9_LCb52ob4I4rA-8zgMdKQB0Fcid9AZfO8bfVfXDKyDUV8GBUgLJPAgjrABWcM8ggWMgzGhsAr1yDq3yru7RERaPfxEVBG_SJxLmi2JwPsWRI7OO7_26DYGfHv45FoCluTKASF_HElZJRYE5pY3doKA02aragtOYNqvKi5uEpFdpah33pX1xAxHHudJojNjpqcHLqVl3bdqOrvry1RlLq23rWQcgJItIQW55gFlnMdFb0wQH6a4Q_HIb_Hw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre class="lang-scala prettyprint-override"><code>def f(n:Int)=(1to BigInt(2).pow(n).toInt-1).map(i=&gt;math.floor(math.sqrt(((BigInt(4).pow(n))-BigInt(i).pow(2)).toDouble)).toLong).sum
+def g(n:Int)=f(n)-3*(0to n-1).map(f).sum
 </code></pre>
 <p>Ungolfed version. <a href="https://ato.pxeger.com/run?1=dVLBSgMxEAWP_Yqh9JAo3dbWgxR7UFQQKghSL6KQtsk2kk222aQq0i_x0ot-lF_jZDe7tIKHHDLz3rx5j_n8LuZMseF2--Wd6J7-HKzM7IXPHdwyqeGjBbDgAjL8EGbTYgTn1rL3x3tnpU6f6AimWjoYl0gAYSwQCWdd6IMzMOjT2ABYMwWWF14FdEokjfUcBzmlSdFOSUdSbHYqWLtCbFrhxT0E0SO40Q51J0anje6aWdRzKDGG_qRV62Xs7YEpz7F6IVPkkQFNcvNKBnAImgL0enC18hKxXLuw8cmzbthKZqW1faqmiTP4h5I9zXNuIzKYl4CpuSUHy3TK_2RyDF47GQfvJ7OQQqBUs3C3VpVxYboDLlbW1b4y5pZJKJAwAle7NH6meA2vQjmKOKGMsaShBychxibniN9NPP03cdzDZ3eWr6XxxTU2SD_6w4gylhNBE0RUGWBs6GmIse-SSqFNdXnxAOtD_AU" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <pre class="lang-scala prettyprint-override"><code>object Main {
@@ -109,6 +104,11 @@ def g(n):
 for i in range(21):
     result = g(i)
     print(f&quot;g({i}) = {result}&quot;)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/nodejs" rel="nofollow noreferrer">Javascript (Node.JS)</a>, 121 bytes</h1>
+<p><a href="https://tio.run/##bcxNDoIwEEDh25CZ/gWiOyiJG3Z6AWPMCBVraKsFTIx69srOjev35V3pQWMb7W2SPnQmpV57XUOjna73SqlNjPSEoqocHlQ03dwaABJHYXFhNsu2NF3UeI8TrBlz0jKL7xw5iRwRPMrfxP85EF@xBiwuOp1DBNJ5SVVRlPhqgx/DYNQQeuhhN7uTWTrniPhJXw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<pre class="lang-js prettyprint-override"><code>g=n=&gt;(F=m=&gt;[...Array(1&lt;&lt;m)].reduce((a,_,i)=&gt;(i&amp;&amp;Math.sqrt(4**m-i*i)|0)+a,0))(n)-[...Array(n)].reduce((a,_,i)=&gt;a+3*F(i),0)
 </code></pre>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 bytes</h1>
