--- a/q/275563.html
+++ b/q/275563.html
@@ -26,17 +26,12 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>013</td><td>Japt</td><td>240916T223015Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275569#275569">Shaggy</a></td></tr>
-<tr d-ix="1"><td>059</td><td>JavaScript ES6</td><td>240916T201812Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275566#275566">Arnauld</a></td></tr>
+<tr d-ix="0"><td>059</td><td>JavaScript ES6</td><td>240916T201812Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275566#275566">Arnauld</a></td></tr>
+<tr d-ix="1"><td>013</td><td>Japt</td><td>240916T223015Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275569#275569">Shaggy</a></td></tr>
 <tr d-ix="2"><td>097</td><td>Python</td><td>240916T201904Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275567#275567">TheLittl</a></td></tr>
 <tr d-ix="3"><td>625</td><td>Vyxal g</td><td>240916T201441Z</td><td><a href="https://codegolf.stackexchange.com/questions/275563/smallest-prime-q-such-that-concatenation-pqq-is-a-prime/275565#275565">pacman25</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 13 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>ÈsiU+X j}aÈ*j
-</code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=yHNpVStYIGp9Ycgqag&amp;input=WzIsMyw1LDcsMTEsMTMsMTcsOTcyMV0tbQ" rel="nofollow noreferrer">Try it</a></p>
-</div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 59 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 59 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>p=&gt;eval(&quot;for(d=q=1;q&lt;d--|q%d&amp;&amp;n%d?1:d=n=d-1&amp;&amp;[++q+p]+q;)q&quot;)
 </code></pre>
@@ -46,6 +41,16 @@
 <pre class="lang-javascript prettyprint-override"><code>p=&gt;{for(d=q=1;q&lt;d--|q%d&amp;&amp;n%d?1:d=n=d-1&amp;&amp;[++q+p]+q;);return q}
 </code></pre>
 <p><a href="https://tio.run/##Tcq7DsIgFADQ3a9wKYEATW4bQxTRD2k6kF4wNpVXq4v67bh65jPbl12nck@bDBFd9aYmc3n7WCiabEDnM0r5yQ0SEhq8wglNMCiBkIHzzNPIs2a6uO1Zwj5/6xTDGhfXLvFGh0704iCUABDQC1Bj@7CJesZ2/83To@qAsfoD" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<h3>recursive, 55 bytes</h3>
+
+<pre class="lang-javascript prettyprint-override"><code>p=&gt;(g=d=&gt;q&lt;d--|q%d&amp;&amp;n%d?g(d):d-1?g(n=[++q+p]+q):q)(q=1)
+</code></pre>
+<p><a href="https://tio.run/##DctLDoIwEADQq7CBdNIOYSRKQhw8CGHRUCAo9mOJC@PZreze5t31W8fxtfodrTNTmjl57sTChrtwNYjfkJuisLm5LcJAa5AOWO6lDNIPMkAbQAQmSKOz0W1TublF9CdVq7NqFJGiWlEzlE/thc24y2ZhASD9nN/XoyTEuOvxgXH9TEyXqqr@" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 13 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>ÈsiU+X j}aÈ*j
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=yHNpVStYIGp9Ycgqag&amp;input=WzIsMyw1LDcsMTEsMTMsMTcsOTcyMV0tbQ" rel="nofollow noreferrer">Try it</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 97 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>g=lambda x:all(x%i for i in range(2,x))
