--- a/q/275564.html
+++ b/q/275564.html
@@ -26,14 +26,23 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>018</td><td>Jelly</td><td>240916T234630Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275571#275571">Unrelate</a></td></tr>
-<tr d-ix="1"><td>125</td><td>Wolfram Language Mathematica</td><td>240917T024742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275575#275575">138 Aspe</a></td></tr>
-<tr d-ix="2"><td>nan</td><td>Scala 3</td><td>240917T021529Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275573#275573">138 Aspe</a></td></tr>
-<tr d-ix="3"><td>121</td><td>Javascript Node.JS</td><td>240917T021829Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275574#275574">Jake</a></td></tr>
-<tr d-ix="4"><td>100</td><td>Python 3</td><td>240917T000136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275572#275572">David Ch</a></td></tr>
+<tr d-ix="0"><td>093</td><td>Python 3</td><td>240917T000136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275572#275572">David Ch</a></td></tr>
+<tr d-ix="1"><td>018</td><td>Jelly</td><td>240916T234630Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275571#275571">Unrelate</a></td></tr>
+<tr d-ix="2"><td>125</td><td>Wolfram Language Mathematica</td><td>240917T024742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275575#275575">138 Aspe</a></td></tr>
+<tr d-ix="3"><td>nan</td><td>Scala 3</td><td>240917T021529Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275573#275573">138 Aspe</a></td></tr>
+<tr d-ix="4"><td>121</td><td>Javascript Node.JS</td><td>240917T021829Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275574#275574">Jake</a></td></tr>
 <tr d-ix="5"><td>173</td><td>Perl 5.10</td><td>240916T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275568#275568">Kjetil S</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <s>100</s> 93 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>g=lambda n:n and f(n)-4*f(n-1)+g(n-1)
+f=lambda n:sum((4**n-i*i)**.5//1for i in range(1,2**n))
+</code></pre>
+<p>(Old: <a href="https://tio.run/##XctJCoAwDEDRq3SZBAfqsFE8TEVbAxql1oWnr3UluP28f9xh2aWO0Q6r2cbJKOnOawNoiCRnYiQq2rLUdveKFYvyRtwMOqsSQOzd91kQzN@5JguMvyPh@EuVxu7wLAFc8hgf" rel="nofollow noreferrer">Try it online!</a>)</p>
+<p>-7 bytes thanks to emanresuA: <a href="https://tio.run/##XYrBDoIwEAXvfsUedxcrKcKFxI@pwdZN5EEqHvz60nAx8TTJzKzf7bngWkq6vcJ8nwJhBAVMFBnieq1wXpp04BR/1/szM/eqcKYmqpehbX1cMhkZKAekB/tzVweR8uc7L@OaDRsntpp3" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p><code>f</code> calculates A156790 and the first lambda function takes the sum of the first <code>n</code> terms of A177144.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 bytes</h1>
 <pre><code>Ż2*R²ạ²Ʋ€½Ḟ§Äṫ-ḅ-4
 </code></pre>
 <p><a href="https://tio.run/##ATMAzP9qZWxsef//xbsyKlLCsuG6ocKyxrLigqzCveG4nsKnw4Thuast4biFLTT/w4cpWf//MTA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -54,7 +63,7 @@
 <p><a href="https://tio.run/##y0rNyan8/99IK@jQpoe7Fh7adGzTob0Pd8xzCq0yKFbyetQw00jr2CaVhztnxT/c2fRwx5KjkzyObXrUtObhrj7tk9NjgBRQHMgP/n@4XTPy/39LAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
 <p>Utterly hopeless, but too fun an idea to pass up :P</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 125 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 125 bytes</h1>
 <p>use quick <code>floorSqrt</code> from <a href="https://mathematica.stackexchange.com/a/165047/79318">this answer</a>.</p>
 <hr />
 <p><a href="https://tio.run/##HctPC4IwHMbxu69CPJXM9qdORSBEdRU9/pi1ZNpg/lZzQRC9djOPD9/P06tw170KplHjwWrlITlbd1P2miZyNw45Xrb7k3XOQ/X0ASodCq8bMxiHgKTUyh7fD4caA/AVYxwlFVLKqJ2f1auHARabGjNTi6UkH0M4EdPkXxl1s5lktk7/sgUzC0bmPnYxzeNSYaeBkVgwGVNaeINh/AE" rel="nofollow noreferrer">Try it online!</a></p>
@@ -63,7 +72,7 @@ f@n_:=Sum[s[(4^n-i^2)],{i,1,2^n-1}]
 g@n_:=f@n-3*Sum[f[i],{i,0,n-1}]
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, <del>173</del> 169 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, <del>173</del> 169 bytes</h1>
 <p>Saved 4 bytes thanks to @Unrelated String</p>
 <hr />
 <p>Golfed version. <a href="https://ato.pxeger.com/run?1=NY6xTsMwFEX3fsVT1OG5kqM0XVBFkEAsSDAhpqqDW2Jj5DwH26FCqH_BxlIGkBBf1L_BcdLFfr7v-p77-eO3wojF3yrjZHfCUbY-ftjNc70NcCc0wfsE4LGW0MQHCqf8Ei6dE2-r--A0qTVbwgPpAFVyAkjrADWccyggWCgLNi4AXoUBV_vO9G6Fmo16G4OCIfSZwqlmcTkdbNng2Mdz_90Fyc-Ov31IW11pdUMBS5a3djfp-0mkZZRYhfOIbZFYHmwU-JzljWhRVxeNCE-5NNY6TKN_cQGxxXJGjI-JOiXG4P77te02pk7jrSXFct81CaZOsEhlfDHDIjLphJLJOBT-GosfDsP9Dw" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -140,17 +149,10 @@ for i in range(21):
     print(f&quot;g({i}) = {result}&quot;)
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/nodejs" rel="nofollow noreferrer">Javascript (Node.JS)</a>, 121 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/nodejs" rel="nofollow noreferrer">Javascript (Node.JS)</a>, 121 bytes</h1>
 <p><a href="https://tio.run/##bcxNDoIwEEDh25CZ/gWiOyiJG3Z6AWPMCBVraKsFTIx69srOjev35V3pQWMb7W2SPnQmpV57XUOjna73SqlNjPSEoqocHlQ03dwaABJHYXFhNsu2NF3UeI8TrBlz0jKL7xw5iRwRPMrfxP85EF@xBiwuOp1DBNJ5SVVRlPhqgx/DYNQQeuhhN7uTWTrniPhJXw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <pre class="lang-js prettyprint-override"><code>g=n=&gt;(F=m=&gt;[...Array(1&lt;&lt;m)].reduce((a,_,i)=&gt;(i&amp;&amp;Math.sqrt(4**m-i*i)|0)+a,0))(n)-[...Array(n)].reduce((a,_,i)=&gt;a+3*F(i),0)
 </code></pre>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 100 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>f=lambda n:sum((4**n-i*i)**.5//1for i in range(1,2**n));g=lambda n:f(n)-sum(3*f(i)for i in range(n))
-</code></pre>
-<p><a href="https://tio.run/##XctJCoAwDEDRq3SZBAfqsFE8TEVbAxql1oWnr3UluP28f9xh2aWO0Q6r2cbJKOnOawNoiCRnYiQq2rLUdveKFYvyRtwMOqsSQOzd91kQzN@5JguMvyPh@EuVxu7wLAFc8hgf" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-<p><code>f</code> calculates A156790 and <code>g</code> takes the sum of the first <code>n</code> terms of A177144.</p>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>.10, 173 bytes</h1>
 
