--- a/q/275564.html
+++ b/q/275564.html
@@ -26,27 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>093</td><td>Python 3</td><td>240917T000136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275572#275572">David Ch</a></td></tr>
-<tr d-ix="1"><td>018</td><td>Jelly</td><td>240916T234630Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275571#275571">Unrelate</a></td></tr>
+<tr d-ix="0"><td>018</td><td>Jelly</td><td>240916T234630Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275571#275571">Unrelate</a></td></tr>
+<tr d-ix="1"><td>093</td><td>Python 3</td><td>240917T000136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275572#275572">David Ch</a></td></tr>
 <tr d-ix="2"><td>125</td><td>Wolfram Language Mathematica</td><td>240917T024742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275575#275575">138 Aspe</a></td></tr>
 <tr d-ix="3"><td>nan</td><td>Scala 3</td><td>240917T021529Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275573#275573">138 Aspe</a></td></tr>
 <tr d-ix="4"><td>121</td><td>Javascript Node.JS</td><td>240917T021829Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275574#275574">Jake</a></td></tr>
 <tr d-ix="5"><td>173</td><td>Perl 5.10</td><td>240916T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/275564/count-squares-in-my-pi-approximation/275568#275568">Kjetil S</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <s>100</s> 93 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>g=lambda n:n and f(n)-4*f(n-1)+g(n-1)
-f=lambda n:sum((4**n-i*i)**.5//1for i in range(1,2**n))
-</code></pre>
-<p>(Old: <a href="https://tio.run/##XctJCoAwDEDRq3SZBAfqsFE8TEVbAxql1oWnr3UluP28f9xh2aWO0Q6r2cbJKOnOawNoiCRnYiQq2rLUdveKFYvyRtwMOqsSQOzd91kQzN@5JguMvyPh@EuVxu7wLAFc8hgf" rel="nofollow noreferrer">Try it online!</a>)</p>
-<p>-7 bytes thanks to emanresuA: <a href="https://tio.run/##XYrBDoIwEAXvfsUedxcrKcKFxI@pwdZN5EEqHvz60nAx8TTJzKzf7bngWkq6vcJ8nwJhBAVMFBnieq1wXpp04BR/1/szM/eqcKYmqpehbX1cMhkZKAekB/tzVweR8uc7L@OaDRsntpp3" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-<p><code>f</code> calculates A156790 and the first lambda function takes the sum of the first <code>n</code> terms of A177144.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 bytes</h1>
 <pre><code>Ż2*R²ạ²Ʋ€½Ḟ§Äṫ-ḅ-4
 </code></pre>
 <p><a href="https://tio.run/##ATMAzP9qZWxsef//xbsyKlLCsuG6ocKyxrLigqzCveG4nsKnw4Thuast4biFLTT/w4cpWf//MTA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
-<p>Takes n as input and outputs the nth element, computing the sequence as the cumulative sums of A177144 (number of squares added to areas not covered by squares in the previous iteration of A156790. Just barely beats the first-n-outputting <code>Ż2*R²ạ²Ʋ€½Ḟ§×4ạḊƲÄṖ</code>.</p>
+<p>Takes n as input and outputs the nth element, computing the sequence as the cumulative sums of A177144 (number of squares added to areas not covered by squares in the previous iteration of A156790). Just barely beats the first-n-outputting <code>Ż2*R²ạ²Ʋ€½Ḟ§×4ạḊƲÄṖ</code>.</p>
 <pre><code>Ż      Ʋ€             For each m in [0 .. n],
            §          sum
  2*R                  for each o in [1 .. 2^m],
@@ -62,6 +53,16 @@ f=lambda n:sum((4**n-i*i)**.5//1for i in range(1,2**n))
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/99IK@jQpoe7Fh7adGzTob0Pd8xzCq0yKFbyetQw00jr2CaVhztnxT/c2fRwx5KjkzyObXrUtObhrj7tk9NjgBRQHMgP/n@4XTPy/39LAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
 <p>Utterly hopeless, but too fun an idea to pass up :P</p>
+<p>Uses the binary expansion of each row to represent greedily filling it with powers of 2, then merges or explodes said powers of 2 into appropriate squares.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <s>100</s> 93 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>g=lambda n:n and f(n)-4*f(n-1)+g(n-1)
+f=lambda n:sum((4**n-i*i)**.5//1for i in range(1,2**n))
+</code></pre>
+<p>(Old: <a href="https://tio.run/##XctJCoAwDEDRq3SZBAfqsFE8TEVbAxql1oWnr3UluP28f9xh2aWO0Q6r2cbJKOnOawNoiCRnYiQq2rLUdveKFYvyRtwMOqsSQOzd91kQzN@5JguMvyPh@EuVxu7wLAFc8hgf" rel="nofollow noreferrer">Try it online!</a>)</p>
+<p>-7 bytes thanks to emanresuA: <a href="https://tio.run/##XYrBDoIwEAXvfsUedxcrKcKFxI@pwdZN5EEqHvz60nAx8TTJzKzf7bngWkq6vcJ8nwJhBAVMFBnieq1wXpp04BR/1/szM/eqcKYmqpehbX1cMhkZKAekB/tzVweR8uc7L@OaDRsntpp3" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p><code>f</code> calculates A156790 and the first lambda function takes the sum of the first <code>n</code> terms of A177144.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 125 bytes</h1>
 <p>use quick <code>floorSqrt</code> from <a href="https://mathematica.stackexchange.com/a/165047/79318">this answer</a>.</p>
